обновлена разметка index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <p class="p1">&lt;body&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;h1&gt;Первая версия сайта&lt;/h1&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;p&gt;Здесь будет контент.&lt;/p&gt;</p>
+<p class="p1">&lt;p&gt;Это новый абзац для тренировки commit и push.&lt;/p&gt;</p>
 <p class="p1">&lt;/body&gt;</p>
 <p class="p1">&lt;/html&gt;</p>
 </body>
